--- a/assets/sass/core/_base.scss
+++ b/assets/sass/core/_base.scss
@@ -264,3 +264,11 @@ body {
         font-weight: 400;
     }
 }
+
+table{
+    tr{
+        td{
+            padding: 15px !important;
+        }
+    }
+}
