--- a/src/output.css
+++ b/src/output.css
@@ -710,12 +710,13 @@ video {
   margin-bottom: 0.75rem;
 }
 
-.mb-0 {
-  margin-bottom: 0px;
+.my-5 {
+  margin-top: 1.25rem;
+  margin-bottom: 1.25rem;
 }
 
-.mt-2 {
-  margin-top: 0.5rem;
+.mb-0 {
+  margin-bottom: 0px;
 }
 
 .mb-2 {
@@ -724,6 +725,14 @@ video {
 
 .mb-3 {
   margin-bottom: 0.75rem;
+}
+
+.mb-5 {
+  margin-bottom: 1.25rem;
+}
+
+.mt-2 {
+  margin-top: 0.5rem;
 }
 
 .mt-4 {
@@ -837,6 +846,30 @@ video {
   height: auto;
 }
 
+.h-\[\] {
+  height: ;
+}
+
+.h-\[48px\] {
+  height: 48px;
+}
+
+.h-\[50px\] {
+  height: 50px;
+}
+
+.\!w-\[200px\] {
+  width: 200px !important;
+}
+
+.w-\[100px\] {
+  width: 100px;
+}
+
+.w-\[250px\] {
+  width: 250px;
+}
+
 .w-\[this-is\\\\\] {
   width: this-is\\;
 }
@@ -849,8 +882,12 @@ video {
   width: weird-and-invalid;
 }
 
-.w-\[250px\] {
-  width: 250px;
+.w-\[200px\] {
+  width: 200px;
+}
+
+.w-\[50px\] {
+  width: 50px;
 }
 
 .flex-shrink {
@@ -921,6 +958,10 @@ video {
 
 .transform-none {
   transform: none;
+}
+
+.cursor-pointer {
+  cursor: pointer;
 }
 
 .touch-auto {
@@ -1849,6 +1890,11 @@ video {
   border-style: none;
 }
 
+.border-\[\#ebebeb\] {
+  --tw-border-opacity: 1;
+  border-color: rgb(235 235 235 / var(--tw-border-opacity));
+}
+
 .bg-\[rgb\(255\2c 0\2c 0\)\] {
   --tw-bg-opacity: 1;
   background-color: rgb(255 0 0 / var(--tw-bg-opacity));
@@ -1862,6 +1908,11 @@ video {
 .bg-second-color {
   --tw-bg-opacity: 1;
   background-color: rgb(222 249 236 / var(--tw-bg-opacity));
+}
+
+.bg-\[\#d79806\] {
+  --tw-bg-opacity: 1;
+  background-color: rgb(215 152 6 / var(--tw-bg-opacity));
 }
 
 .decoration-slice {
@@ -1986,6 +2037,10 @@ video {
   padding: 25px;
 }
 
+.p-2 {
+  padding: 0.5rem;
+}
+
 .px-\[15px\] {
   padding-left: 15px;
   padding-right: 15px;
@@ -1994,6 +2049,16 @@ video {
 .py-\[8px\] {
   padding-top: 8px;
   padding-bottom: 8px;
+}
+
+.px-\[10px\] {
+  padding-left: 10px;
+  padding-right: 10px;
+}
+
+.py-\[5px\] {
+  padding-top: 5px;
+  padding-bottom: 5px;
 }
 
 .ps-2 {
@@ -2064,6 +2129,10 @@ video {
   font-size: 13px;
 }
 
+.text-\[14px\] {
+  font-size: 14px;
+}
+
 .text-\[18px\] {
   font-size: 18px;
 }
@@ -2072,12 +2141,20 @@ video {
   font-size: 19px;
 }
 
+.text-\[141px\] {
+  font-size: 141px;
+}
+
+.text-\[15px\] {
+  font-size: 15px;
+}
+
 .text-\[16px\] {
   font-size: 16px;
 }
 
-.text-\[14px\] {
-  font-size: 14px;
+.text-\[20px\] {
+  font-size: 20px;
 }
 
 .font-bold {
@@ -2173,6 +2250,11 @@ video {
   color: rgb(51 102 153 / .35);
 }
 
+.text-\[\#fff\] {
+  --tw-text-opacity: 1;
+  color: rgb(255 255 255 / var(--tw-text-opacity));
+}
+
 .text-blue-500 {
   --tw-text-opacity: 1;
   color: rgb(59 130 246 / var(--tw-text-opacity));
@@ -2183,19 +2265,28 @@ video {
   color: rgb(59 183 126 / var(--tw-text-opacity));
 }
 
+.text-third-color {
+  --tw-text-opacity: 1;
+  color: rgb(37 61 78 / var(--tw-text-opacity));
+}
+
 .text-white {
   --tw-text-opacity: 1;
   color: rgb(230 234 239 / var(--tw-text-opacity));
 }
 
-.text-\[\#fff\] {
-  --tw-text-opacity: 1;
-  color: rgb(255 255 255 / var(--tw-text-opacity));
+.text-\[\] {
+  color: ;
 }
 
-.text-third-color {
+.\!text-third-color {
+  --tw-text-opacity: 1 !important;
+  color: rgb(37 61 78 / var(--tw-text-opacity)) !important;
+}
+
+.text-fourth-color {
   --tw-text-opacity: 1;
-  color: rgb(37 61 78 / var(--tw-text-opacity));
+  color: rgb(126 126 126 / var(--tw-text-opacity));
 }
 
 .underline {
@@ -2581,7 +2672,26 @@ video {
   text-align: center;
 }
 
+@media not all and (min-width: 640px) {
+  .max-sm\:block {
+    display: block;
+  }
+
+  .max-sm\:max-w-max {
+    max-width: -moz-max-content;
+    max-width: max-content;
+  }
+}
+
 @media (min-width: 640px) {
+  .sm\:w-\[250px\] {
+    width: 250px;
+  }
+
+  .sm\:w-auto {
+    width: auto;
+  }
+
   .sm\:text-\[22px\] {
     font-size: 22px;
   }
