--- a/assets/sass/main.css
+++ b/assets/sass/main.css
@@ -276,6 +276,14 @@ table tr td {
   }
 }
 
+.auth__layout .auth__form input::-moz-placeholder {
+  font-size: 14px;
+}
+
+.auth__layout .auth__form input::placeholder {
+  font-size: 14px;
+}
+
 .sidebar {
   position: fixed;
   top: 0;
