--- a/src/output.css
+++ b/src/output.css
@@ -731,6 +731,10 @@ video {
   margin-bottom: 1rem;
 }
 
+.mb-\[35px\] {
+  margin-bottom: 35px;
+}
+
 .mt-2 {
   margin-top: 0.5rem;
 }
@@ -741,6 +745,10 @@ video {
 
 .mt-5 {
   margin-top: 1.25rem;
+}
+
+.mt-\[35px\] {
+  margin-top: 35px;
 }
 
 .box-border {
@@ -846,12 +854,24 @@ video {
   height: 110px !important;
 }
 
+.h-\[100\%\] {
+  height: 100%;
+}
+
 .h-\[48px\] {
   height: 48px;
 }
 
 .h-auto {
   height: auto;
+}
+
+.h-full {
+  height: 100%;
+}
+
+.h-\[100vh\] {
+  height: 100vh;
 }
 
 .max-h-max {
@@ -1783,6 +1803,10 @@ video {
   border-radius: 8px;
 }
 
+.rounded-lg {
+  border-radius: 0.5rem;
+}
+
 .rounded-b {
   border-bottom-right-radius: 0.25rem;
   border-bottom-left-radius: 0.25rem;
@@ -1911,9 +1935,19 @@ video {
   border-style: none;
 }
 
+.border-\[\#DDD8F9\] {
+  --tw-border-opacity: 1;
+  border-color: rgb(221 216 249 / var(--tw-border-opacity));
+}
+
 .\!bg-\[\#F9FAFB\] {
   --tw-bg-opacity: 1 !important;
   background-color: rgb(249 250 251 / var(--tw-bg-opacity)) !important;
+}
+
+.\!bg-\[\#fff\] {
+  --tw-bg-opacity: 1 !important;
+  background-color: rgb(255 255 255 / var(--tw-bg-opacity)) !important;
 }
 
 .bg-\[\#d79806\] {
@@ -2077,6 +2111,11 @@ video {
   padding-right: 10px;
 }
 
+.px-\[12px\] {
+  padding-left: 12px;
+  padding-right: 12px;
+}
+
 .px-\[15px\] {
   padding-left: 15px;
   padding-right: 15px;
@@ -2090,6 +2129,16 @@ video {
 .px-\[9px\] {
   padding-left: 9px;
   padding-right: 9px;
+}
+
+.py-\[12px\] {
+  padding-top: 12px;
+  padding-bottom: 12px;
+}
+
+.py-\[15px\] {
+  padding-top: 15px;
+  padding-bottom: 15px;
 }
 
 .py-\[24px\] {
@@ -2110,6 +2159,10 @@ video {
 .py-\[8px\] {
   padding-top: 8px;
   padding-bottom: 8px;
+}
+
+.pb-5 {
+  padding-bottom: 1.25rem;
 }
 
 .ps-2 {
@@ -2190,6 +2243,10 @@ video {
 
 .text-\[16px\] {
   font-size: 16px;
+}
+
+.text-\[17px\] {
+  font-size: 17px;
 }
 
 .text-\[18px\] {
@@ -2740,6 +2797,21 @@ video {
     padding: 32px;
   }
 
+  .sm\:px-\[25px\] {
+    padding-left: 25px;
+    padding-right: 25px;
+  }
+
+  .sm\:px-\[40px\] {
+    padding-left: 40px;
+    padding-right: 40px;
+  }
+
+  .sm\:py-\[20px\] {
+    padding-top: 20px;
+    padding-bottom: 20px;
+  }
+
   .sm\:text-\[13px\] {
     font-size: 13px;
   }
@@ -2772,6 +2844,12 @@ video {
 
   .md\:w-\[50\%\] {
     width: 50%;
+  }
+}
+
+@media (min-width: 1024px) {
+  .lg\:flex {
+    display: flex;
   }
 }
 
