--- a/assets/sass/core/_base.scss
+++ b/assets/sass/core/_base.scss
@@ -18,8 +18,8 @@ body {
     overflow-y: scroll !important;
 }
 
-::-webkit-scrollbar-thumb {
-    background-color: $second-color;
+::-webkit-scrollbar-thumb,.sidebar.open::-webkit-scrollbar-thumb {
+    background-color: #3BB77E;
     border-radius: 0px;
     height: 4px;
 }
@@ -309,3 +309,19 @@ table{
     padding-inline-start: 11px !important;
     font-family: 'Cairo' !important;
   }
+
+
+.sidebar{
+    overflow-y: scroll;
+}
+.sidebar::-webkit-scrollbar-thumb,.sidebar.open::-webkit-scrollbar-thumb {
+    background-color: #3BB77E !important;
+    border-radius: 0px;
+    height: 4px;
+}
+
+.sidebar::-webkit-scrollbar {
+    width: 4px;
+    height: 4px;
+    background-color: transparent;
+}
